# makers-project

./: .ccursorrules  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
app/: main.py
app/core/: database.py
app/models/: product.py  user.py
app/routers/: products.py  users.py
app/schemas/: common.py  products.py  users.py
app/services/: product_service.py  user_service.py
